--- a/catdad/index.htm
+++ b/catdad/index.htm
@@ -161,7 +161,7 @@
           (I promise I'm professional when I need to be)
         </p>
         <p style="margin-top: var(--spacing-md);">
-          <a href="https://middleton.io/" class="kawaii-link boing">See the full paw-folio →</a>
+          <a href="https://middleton.io/" target="_blank" class="kawaii-link boing">See the full paw-folio →</a>
         </p>
       </section>
 
