--- a/nyc/index.htm
+++ b/nyc/index.htm
@@ -127,14 +127,14 @@
         </div>
 
         <p style="margin-top: var(--spacing-lg);">
-          <a href="https://middleton.io/#experience">See my full background →</a>
+          <a href="https://middleton.io/#experience" target="_blank">See my full background →</a>
         </p>
       </section>
 
       <!-- CTA -->
       <section class="nyc-cta" id="cta">
         <h4>If this resonates</h4>
-        <a href="https://calendly.com/kevin-middleton/15min" class="btn btn-primary">15 minutes. No pitch.</a>
+        <a href="https://calendly.com/kevin-middleton/15min" target="_blank" class="btn btn-primary">15 minutes. No pitch.</a>
         <p class="cta-note">Coffee in NYC or virtual. Your call.</p>
       </section>
 
