--- a/nyc/index.htm
+++ b/nyc/index.htm
@@ -134,7 +134,7 @@
       <!-- CTA -->
       <section class="nyc-cta" id="cta">
         <h4>If this resonates</h4>
-        <a href="https://calendly.com/kevin-middleton/15min" target="_blank" class="btn btn-primary">15 minutes. No pitch.</a>
+        <a href="https://calendly.com/kevin-middleton/15min" target="_blank" class="btn btn-primary">Let's talk</a>
         <p class="cta-note">Coffee in NYC or virtual. Your call.</p>
       </section>
 
