--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="KevinOS — Full Stack Product Manager">
     <meta property="og:description"
         content="I make complex work feel simple. 12+ years building consumer, enterprise, and platform SaaS products.">
-    <meta property="og:image" content="https://middleton.io/images/kevinos-og.png">
+    <meta property="og:image" content="https://middleton.io/images/kevinos.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
