--- a/index.htm
+++ b/index.htm
@@ -356,7 +356,8 @@
                         </div>
                         <div class="exp-content">
                             <p class="exp-description">
-                                Led product strategy, UX, and growth for <strong>HVAC.com</strong>, a homeowner platform
+                                Owned product strategy, UX, and growth for <strong>HVAC.com</strong>, a homeowner
+                                platform
                                 with <strong>~2M annual visits</strong> that connects consumers to trusted HVAC dealers
                                 nationwide. Owned the full digital funnel, from first touch to dealer handoff, driving
                                 measurable conversion gains and shaping Trane's broader digital strategy.
@@ -484,14 +485,13 @@
                         <div class="exp-content">
                             <p class="exp-description">
                                 Owned end-to-end development of HRIS Sync, a core enterprise integration that
-                                strengthened
-                                Lever's upmarket positioning through automation, workflow reliability, and
+                                strengthened Lever's upmarket positioning through automation, workflow reliability, and
                                 enterprise-grade data sync.
                             </p>
                             <ul class="exp-highlights">
                                 <li><strong>HRIS Sync Launch:</strong> Launched HRIS Sync with <strong>37%
-                                        engagement</strong> in Q1, delivering org chart–aware approvals, accurate user
-                                    statuses, and SCIM‑based data sync for enterprise‑grade reliability.</li>
+                                        Q1 engagement</strong>, enabling org chart-aware approvals, automated user
+                                    provisioning, and SCIM-based sync for enterprise customers.</li>
                                 <li><strong>Bulk Importer:</strong> Delivered a self‑serve Bulk Candidate Importer that
                                     reduced upload times from days to minutes, cutting support and implementation
                                     workloads and enabling customers to manage large volumes on their own.</li>
@@ -547,14 +547,15 @@
                         </div>
                         <div class="exp-content">
                             <p class="exp-description">
-                                Led product strategy for the Core Platform and eGift expansion. Owned partnerships and
+                                Owned product strategy for the Core Platform and eGift expansion. Owned partnerships and
                                 internal tools for the eGift ecosystem, driving catalog growth, platform security,
                                 operational efficiency, and revenue-aligned feature development.
                             </p>
                             <ul class="exp-highlights">
                                 <li><strong>Catalog Expansion:</strong> Doubled active eGift coverage from 800 to 1,600
-                                    options across 47 countries. Landed the Square partnership for local gifting in the
-                                    U.S., Canada, Australia, and U.K.</li>
+                                    options across 47 countries. Landed Square as a strategic partner, enabling
+                                    personalized small business gifting in 4 major markets (U.S., Canada, Australia, and
+                                    U.K.).</li>
                                 <li><strong>Platform Security:</strong> Increased platform trust by implementing
                                     two‑factor authentication and AI‑driven fraud detection, reducing bot‑driven
                                     attacks.</li>
@@ -607,11 +608,9 @@
                         </div>
                         <div class="exp-content">
                             <p class="exp-description">
-                                Led product strategy and execution for Rocket Lawyer's Platform and Legal Document
-                                teams,
-                                expanding market reach, improving mobile engagement, and diversifying revenue streams
-                                while
-                                advancing Rocket Lawyer's mission to make legal services more accessible.
+                                Owned product strategy and execution for Rocket Lawyer's Platform and Legal Document
+                                teams, expanding market reach, improving mobile engagement, and diversifying revenue
+                                streams while advancing Rocket Lawyer's mission to make legal services more accessible.
                             </p>
                             <ul class="exp-highlights">
                                 <li><strong>Co‑Branded Partner Sites:</strong> Created and launched co‑branded partner
