--- a/index.htm
+++ b/index.htm
@@ -75,6 +75,9 @@
                         <a href="#experience" class="btn btn-primary">See My Work</a>
                         <a href="#about" class="btn btn-secondary">About Me</a>
                     </div>
+                    <p class="hero-side-project">
+                        💻 Currently tinkering with: <a href="https://middleton.io" target="_blank">KevinOS</a>
+                    </p>
                 </div>
             </div>
         </section>
