--- a/index.htm
+++ b/index.htm
@@ -76,7 +76,7 @@
                         <a href="#about" class="btn btn-secondary">About Me</a>
                     </div>
                     <p class="hero-side-project">
-                        💻 Currently tinkering with: <a href="https://middleton.io" target="_blank">KevinOS</a>
+                        💻 Currently tinkering with: <a href="https://middleton.io/kevinos" target="_blank">KevinOS</a>
                     </p>
                 </div>
             </div>
