--- a/casestudies/case-study-lever.html
+++ b/casestudies/case-study-lever.html
@@ -21,7 +21,7 @@
             <img src="https://middleton.io/images/lever-logo.webp" alt="Lever">
             lever-hris-sync.md
         </div>
-        <a href="kevin-os-v2.html" class="back-link">← Back to KevinOS</a>
+        <a href="https://middleton.io/kevinos" class="back-link">← Back to KevinOS</a>
     </header>
 
     <!-- Hero -->
