--- a/casestudies/case-study-oracle.html
+++ b/casestudies/case-study-oracle.html
@@ -21,7 +21,7 @@
             <img src="https://middleton.io/images/oracle-logo.png" alt="Oracle">
             oracle-engage-modernization.md
         </div>
-        <a href="kevin-os-v2.html" class="back-link">← Back to KevinOS</a>
+        <a href="https://middleton.io/kevinos" class="back-link">← Back to KevinOS</a>
     </header>
 
     <!-- Hero -->
