--- a/casestudies/case-study-rocketlawyer-covea.html
+++ b/casestudies/case-study-rocketlawyer-covea.html
@@ -21,7 +21,7 @@
             <img src="https://middleton.io/images/rocket-lawyer-logo-sq.png" alt="Rocket Lawyer">
             rocketlawyer-covea-partnership.md
         </div>
-        <a href="kevin-os-v2.html" class="back-link">← Back to KevinOS</a>
+        <a href="https://middleton.io/kevinos" class="back-link">← Back to KevinOS</a>
     </header>
 
     <!-- Hero -->
