--- a/casestudies/case-study-sendoso.html
+++ b/casestudies/case-study-sendoso.html
@@ -21,7 +21,7 @@
             <img src="https://middleton.io/images/sendoso-logo.png" alt="Sendoso">
             sendoso-egift-expansion.md
         </div>
-        <a href="kevin-os-v2.html" class="back-link">← Back to KevinOS</a>
+        <a href="https://middleton.io/kevinos" class="back-link">← Back to KevinOS</a>
     </header>
 
     <!-- Hero -->
