--- a/casestudies/case-study-oracle.html
+++ b/casestudies/case-study-oracle.html
@@ -17,11 +17,11 @@
             <span class="window-dot yellow"></span>
             <span class="window-dot green"></span>
         </div>
-        <div class="window-title">
+        <div class="window-title" data-kevinos-title="oracle-engage-modernization.md" data-portfolio-title="Oracle · Scaling Social">
             <img src="https://middleton.io/images/oracle-logo.png" alt="Oracle">
-            oracle-engage-modernization.md
+            Oracle · Scaling Social
         </div>
-        <a href="https://middleton.io/kevinos" class="back-link">← Back to KevinOS</a>
+        <a href="https://middleton.io" class="back-link">← Back to Portfolio</a>
     </header>
 
     <!-- Hero -->
@@ -446,7 +446,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <a href="kevin-os-v2.html" class="back-link" style="font-size: 14px;">← Back to KevinOS</a>
+        <a href="https://middleton.io" class="back-link" style="font-size: 14px;">← Back to Portfolio</a>
         <p class="footer-meta" style="margin-top: 16px;">Case Study · Oracle · Kevin Middleton</p>
     </footer>
 
