--- a/casestudies/case-study-sendoso.html
+++ b/casestudies/case-study-sendoso.html
@@ -17,11 +17,11 @@
             <span class="window-dot yellow"></span>
             <span class="window-dot green"></span>
         </div>
-        <div class="window-title">
+        <div class="window-title" data-kevinos-title="sendoso-egift-expansion.md" data-portfolio-title="Sendoso · eGift Platform Expansion">
             <img src="https://middleton.io/images/sendoso-logo.png" alt="Sendoso">
-            sendoso-egift-expansion.md
+            Sendoso · eGift Platform Expansion
         </div>
-        <a href="https://middleton.io/kevinos" class="back-link">← Back to KevinOS</a>
+        <a href="https://middleton.io" class="back-link">← Back to Portfolio</a>
     </header>
 
     <!-- Hero -->
@@ -430,7 +430,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <a href="kevin-os-v2.html" class="back-link" style="font-size: 14px;">← Back to KevinOS</a>
+        <a href="https://middleton.io" class="back-link" style="font-size: 14px;">← Back to Portfolio</a>
         <p class="footer-meta" style="margin-top: 16px;">Case Study · Sendoso · Kevin Middleton</p>
     </footer>
 
