--- a/casestudies/case-study-lever.html
+++ b/casestudies/case-study-lever.html
@@ -17,11 +17,11 @@
             <span class="window-dot yellow"></span>
             <span class="window-dot green"></span>
         </div>
-        <div class="window-title">
+        <div class="window-title" data-kevinos-title="lever-hris-sync.md" data-portfolio-title="Lever · Moving Upmarket">
             <img src="https://middleton.io/images/lever-logo.webp" alt="Lever">
-            lever-hris-sync.md
+            Lever · Moving Upmarket
         </div>
-        <a href="https://middleton.io/kevinos" class="back-link">← Back to KevinOS</a>
+        <a href="https://middleton.io" class="back-link">← Back to Portfolio</a>
     </header>
 
     <!-- Hero -->
@@ -409,7 +409,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <a href="kevin-os-v2.html" class="back-link" style="font-size: 14px;">← Back to KevinOS</a>
+        <a href="https://middleton.io" class="back-link" style="font-size: 14px;">← Back to Portfolio</a>
         <p class="footer-meta" style="margin-top: 16px;">Case Study · Lever · Kevin Middleton</p>
     </footer>
 
