--- a/casestudies/case-study-rocketlawyer-covea.html
+++ b/casestudies/case-study-rocketlawyer-covea.html
@@ -17,11 +17,11 @@
             <span class="window-dot yellow"></span>
             <span class="window-dot green"></span>
         </div>
-        <div class="window-title">
+        <div class="window-title" data-kevinos-title="rocketlawyer-covea-partnership.md" data-portfolio-title="Rocket Lawyer · Co-Branded Partner Sites">
             <img src="https://middleton.io/images/rocket-lawyer-logo-sq.png" alt="Rocket Lawyer">
-            rocketlawyer-covea-partnership.md
+            Rocket Lawyer · Co-Branded Partner Sites
         </div>
-        <a href="https://middleton.io/kevinos" class="back-link">← Back to KevinOS</a>
+        <a href="https://middleton.io" class="back-link">← Back to Portfolio</a>
     </header>
 
     <!-- Hero -->
@@ -437,7 +437,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <a href="kevin-os-v2.html" class="back-link" style="font-size: 14px;">← Back to KevinOS</a>
+        <a href="https://middleton.io" class="back-link" style="font-size: 14px;">← Back to Portfolio</a>
         <p class="footer-meta" style="margin-top: 16px;">Case Study · Rocket Lawyer · Kevin Middleton</p>
     </footer>
 
