--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -707,7 +707,7 @@
                 </header>
                 <div class="window-content">
                     <div class="projects-grid">
-                        <a href="https://middleton.io/casestudies/case-study-sendoso.html" target="_blank"
+                        <a href="https://middleton.io/casestudies/case-study-sendoso.html?from=kevinos" target="_blank"
                             class="project-card-link">
                             <article class="project-card sendoso">
                                 <div class="project-img"><img src="https://middleton.io/images/sendoso.png"
@@ -719,7 +719,7 @@
                                 </div>
                             </article>
                         </a>
-                        <a href="https://middleton.io/casestudies/case-study-lever.html" target="_blank"
+                        <a href="https://middleton.io/casestudies/case-study-lever.html?from=kevinos" target="_blank"
                             class="project-card-link">
                             <article class="project-card lever">
                                 <div class="project-img"><img src="https://middleton.io/images/Lever-logo.png"
@@ -731,7 +731,7 @@
                                 </div>
                             </article>
                         </a>
-                        <a href="https://middleton.io/casestudies/case-study-rocketlawyer-covea.html" target="_blank"
+                        <a href="https://middleton.io/casestudies/case-study-rocketlawyer-covea.html?from=kevinos" target="_blank"
                             class="project-card-link">
                             <article class="project-card rocket-lawyer">
                                 <div class="project-img"><img src="https://middleton.io/images/rocket-lawyer.png"
@@ -742,7 +742,7 @@
                                 </div>
                             </article>
                         </a>
-                        <a href="https://middleton.io/casestudies/case-study-rocketlawyer-mobile.html" target="_blank"
+                        <a href="https://middleton.io/casestudies/case-study-rocketlawyer-mobile.html?from=kevinos" target="_blank"
                             class="project-card-link">
                             <article class="project-card rocket-lawyer">
                                 <div class="project-img"><img src="https://middleton.io/images/rocket-lawyer.png"
@@ -754,7 +754,7 @@
                                 </div>
                             </article>
                         </a>
-                        <a href="https://middleton.io/casestudies/case-study-oracle.html" target="_blank"
+                        <a href="https://middleton.io/casestudies/case-study-oracle.html?from=kevinos" target="_blank"
                             class="project-card-link">
                             <article class="project-card oracle">
                                 <div class="project-img"><img src="https://middleton.io/images/oracle-logo.png"
