--- a/index.htm
+++ b/index.htm
@@ -802,19 +802,20 @@
                                     </p>
                                 </div>
                             </div>
+                            </a>
 
+                            <a href="https://middleton.io/casestudies/case-study-hvac.html" target="_blank" rel="noopener noreferrer" class="project-card-link">
                             <div class="card project-card glass-card">
                                 <div class="project-image-wrap">
-                                    <img src="https://middleton.io/images/hurd-ai.png" alt="Hurd AI logo"
+                                    <img src="https://middleton.io/images/hvac-com-logo-color.png" alt="Hurd AI logo"
                                         class="project-image">
                                 </div>
                                 <div class="card-content">
-                                    <h3 class="project-title">AI-Powered Learning Platform</h3>
-                                    <p class="project-description">Built AI‑powered learning tools across Mac and
-                                        web—including transcription, summarization, and chat-based study workflows—and
-                                        drove <strong>700% user growth</strong> post‑launch.</p>
+                                    <h3 class="project-title">Calculators & Conversion Optimization</h3>
+                                    <p class="project-description">Built high-intent tools from scratch, including interactive calculators and a repair funnel, driving <strong>50x conversion lift</strong> over baseline through relentless A/B testing and data-driven iteration.</p>
                                 </div>
                             </div>
+                            </a>
                         </div>
                     </div>
                 </section>
