--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -731,8 +731,8 @@
                                 </div>
                             </article>
                         </a>
-                        <a href="https://middleton.io/casestudies/case-study-rocketlawyer-covea.html?from=kevinos" target="_blank"
-                            class="project-card-link">
+                        <a href="https://middleton.io/casestudies/case-study-rocketlawyer-covea.html?from=kevinos"
+                            target="_blank" class="project-card-link">
                             <article class="project-card rocket-lawyer">
                                 <div class="project-img"><img src="https://middleton.io/images/rocket-lawyer.png"
                                         alt="Rocket Lawyer"></div>
@@ -742,8 +742,8 @@
                                 </div>
                             </article>
                         </a>
-                        <a href="https://middleton.io/casestudies/case-study-rocketlawyer-mobile.html?from=kevinos" target="_blank"
-                            class="project-card-link">
+                        <a href="https://middleton.io/casestudies/case-study-rocketlawyer-mobile.html?from=kevinos"
+                            target="_blank" class="project-card-link">
                             <article class="project-card rocket-lawyer">
                                 <div class="project-img"><img src="https://middleton.io/images/rocket-lawyer.png"
                                         alt="Rocket Lawyer"></div>
@@ -766,14 +766,18 @@
                                 </div>
                             </article>
                         </a>
-                        <article class="project-card hurd">
-                            <div class="project-img"><img src="https://middleton.io/images/hurd-ai.png" alt="HURD AI">
-                            </div>
-                            <div class="project-body">
-                                <h4>AI-Powered Learning Platform</h4>
-                                <p>Transcription, summarization, and chat-based study. 700% user growth post-launch.</p>
-                            </div>
-                        </article>
+                        <a href="https://middleton.io/casestudies/case-study-hvac.html?from=kevinos" target="_blank"
+                            class="project-card-link">
+                            <article class="project-card hvac">
+                                <div class="project-img"><img src="https://middleton.io/images/hvac-com-logo-color.png"
+                                        alt="HVAC.com"></div>
+                                <div class="project-body">
+                                    <h4>Calculators & Conversion Optimization</h4>
+                                    <p>Built high-intent tools from scratch, driving 50x conversion lift through A/B
+                                        testing.</p>
+                                </div>
+                            </article>
+                        </a>
                     </div>
                 </div>
             </section>
