--- a/casestudies/case-study-hvac.html
+++ b/casestudies/case-study-hvac.html
@@ -317,7 +317,7 @@
                 </div>
                 <div class="card card--pink">
                     <h3>Trane Integration & Impact</h3>
-                    <p>Insights from HVAC.com informed Trane's System Recommender Tool pilot in Florida, later expanded to the Southeast, Arizona, and Texas. Fresh ideas shaped the foundation for Trane's 2025 roadmap.</p>
+                    <p>Insights from HVAC.com informed Trane's System Recommender Tool pilot in Florida, later expanded to NC, SC, GA, TX, and AZ.</p>
                 </div>
             </div>
         </div>
