--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -352,6 +352,7 @@
                                 <div class="exp-role">Co-Founder & Director of PM (initially Product Advisor)</div>
                                 <div class="exp-date">2024 — Present</div>
                             </div>
+                            <span class="exp-caret">›</span>
                             <div class="exp-detail">
                                 <p>Began supporting GridStrong.ai in September 2024 as a Product Advisor, creating early
                                     prototypes and helping secure a $1.4M U.S. Department of Energy grant. After seed
@@ -716,6 +717,7 @@
                                     <h4>eGift Platform Expansion</h4>
                                     <p>Doubled eGift coverage to 1,600+ options across 47 countries. Landed Square
                                         partnership.</p>
+                                    <span class="project-external">↗</span>
                                 </div>
                             </article>
                         </a>
@@ -728,6 +730,7 @@
                                     <h4>Moving Lever Upmarket</h4>
                                     <p>Reduced migration time from days to minutes. HRIS Sync achieved 37% engagement in
                                         Q1.</p>
+                                    <span class="project-external">↗</span>
                                 </div>
                             </article>
                         </a>
@@ -739,6 +742,7 @@
                                 <div class="project-body">
                                     <h4>Co-Branded Partner Sites</h4>
                                     <p>Reached 11.5M users. Built platform powering the next ten integrations.</p>
+                                    <span class="project-external">↗</span>
                                 </div>
                             </article>
                         </a>
@@ -751,6 +755,7 @@
                                     <h4>Mobile Conversion Optimization</h4>
                                     <p>5% conversion lift for the highest-revenue product line through targeted A/B
                                         testing.</p>
+                                    <span class="project-external">↗</span>
                                 </div>
                             </article>
                         </a>
@@ -763,6 +768,7 @@
                                     <h4>Engage v2 and New Networks</h4>
                                     <p>36 new features in one year. Doubled network coverage with LinkedIn, Instagram,
                                         and more.</p>
+                                    <span class="project-external">↗</span>
                                 </div>
                             </article>
                         </a>
@@ -775,6 +781,7 @@
                                     <h4>Calculators & Conversion Optimization</h4>
                                     <p>Built high-intent tools from scratch, driving 50x conversion lift through A/B
                                         testing.</p>
+                                    <span class="project-external">↗</span>
                                 </div>
                             </article>
                         </a>
