--- a/index.htm
+++ b/index.htm
@@ -31,6 +31,13 @@
     <meta name="twitter:image" content="https://middleton.io/images/kevin-middleton-saas-product-manager.png">
 
     <meta name="theme-color" content="#0A0A0C">
+    <!-- Privacy-friendly analytics by Plausible -->
+    <script async src="https://plausible.io/js/pa-CycHtdoRKtjDMtDpjBTA4.js"></script>
+    <script>
+    window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
+    plausible.init()
+    </script>
+
 </head>
 
 <body>
