--- a/officehours/index.htm
+++ b/officehours/index.htm
@@ -28,6 +28,12 @@
     href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Permanent+Marker&family=Caveat:wght@500;600;700&family=Patrick+Hand&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="officehours.css">
+  <!-- Privacy-friendly analytics by Plausible -->
+  <script async src="https://plausible.io/js/pa-CycHtdoRKtjDMtDpjBTA4.js"></script>
+  <script>
+   window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
+   plausible.init()
+  </script>
 </head>
 
 <body>
