--- a/nyc/index.htm
+++ b/nyc/index.htm
@@ -26,6 +26,12 @@
   <link rel="stylesheet" href="../styles.css">
   <!-- NYC page styles -->
   <link rel="stylesheet" href="nyc.css">
+  <!-- Privacy-friendly analytics by Plausible -->
+  <script async src="https://plausible.io/js/pa-CycHtdoRKtjDMtDpjBTA4.js"></script>
+  <script>
+  window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
+  plausible.init()
+  </script>
 </head>
 
 <body>
