--- a/catdad/index.htm
+++ b/catdad/index.htm
@@ -29,6 +29,12 @@
     href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Caveat:wght@500;700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="kawaii.css">
+  <!-- Privacy-friendly analytics by Plausible -->
+  <script async src="https://plausible.io/js/pa-CycHtdoRKtjDMtDpjBTA4.js"></script>
+  <script>
+  window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
+  plausible.init()
+  </script>
 </head>
 
 <body>
