--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -352,13 +352,12 @@
                             <div class="exp-info">
                                 <h4><a href="https://gridstrong.ai" target="_blank"
                                         onclick="event.stopPropagation()">GRIDSTRONG</a></h4><span
-                                    class="exp-meta">gridstrong.json · Energy Compliance</span>
+                                    class="exp-meta">Energy Compliance</span>
                             </div>
                             <div class="exp-right">
                                 <div class="exp-role">Co-Founder & Director of PM (initially Product Advisor)</div>
                                 <div class="exp-date">2024 — Present</div>
                             </div>
-                            <span class="exp-caret">›</span>
                             <div class="exp-detail">
                                 <p>Began supporting GridStrong.ai in September 2024 as a Product Advisor, creating early
                                     prototypes and helping secure a $1.4M U.S. Department of Energy grant. After seed
@@ -404,7 +403,7 @@
                             <div class="exp-info">
                                 <h4><a href="https://hvac.com" target="_blank"
                                         onclick="event.stopPropagation()">HVAC.COM</a></h4><span
-                                    class="exp-meta">hvac.json · Acquired by Trane Technologies May 2024</span>
+                                    class="exp-meta">Acquired by Trane Technologies May 2024</span>
                             </div>
                             <div class="exp-right">
                                 <div class="exp-role">Senior PM, Growth</div>
@@ -456,7 +455,7 @@
                             </div>
                             <div class="exp-info">
                                 <h4><a href="https://hurd.ai" target="_blank" onclick="event.stopPropagation()">HURD
-                                        AI</a></h4><span class="exp-meta">hurd.json · AI Learning Platform</span>
+                                        AI</a></h4><span class="exp-meta">AI Learning Platform</span>
                             </div>
                             <div class="exp-right">
                                 <div class="exp-role">Co-Founder & Product Advisor</div>
@@ -503,7 +502,7 @@
                             <div class="exp-info">
                                 <h4><a href="https://lever.co" target="_blank"
                                         onclick="event.stopPropagation()">LEVER</a></h4><span
-                                    class="exp-meta">lever.json · Acquired by Employ July 2022</span>
+                                    class="exp-meta">Acquired by Employ July 2022</span>
                             </div>
                             <div class="exp-right">
                                 <div class="exp-role">Senior PM, HRIS Sync Lead</div>
@@ -555,7 +554,7 @@
                             <div class="exp-info">
                                 <h4><a href="https://sendoso.com" target="_blank"
                                         onclick="event.stopPropagation()">SENDOSO</a></h4><span
-                                    class="exp-meta">sendoso.json · Gifting Platform</span>
+                                    class="exp-meta">Gifting Platform</span>
                             </div>
                             <div class="exp-right">
                                 <div class="exp-role">Senior PM, Core Platform & eGift</div>
@@ -601,7 +600,7 @@
                             <div class="exp-info">
                                 <h4><a href="https://rocketlawyer.com" target="_blank"
                                         onclick="event.stopPropagation()">ROCKET LAWYER</a></h4><span
-                                    class="exp-meta">rocketlawyer.json · Legal Tech</span>
+                                    class="exp-meta">Legal Tech</span>
                             </div>
                             <div class="exp-right">
                                 <div class="exp-role">Senior PM, Core Product & Platform</div>
@@ -656,7 +655,7 @@
                             <div class="exp-info">
                                 <h4><a href="https://oracle.com" target="_blank"
                                         onclick="event.stopPropagation()">ORACLE</a></h4><span
-                                    class="exp-meta">oracle.json · Social Cloud</span>
+                                    class="exp-meta">Social Cloud</span>
                             </div>
                             <div class="exp-right">
                                 <div class="exp-role">Senior PM, Engage & Integrations</div>
