--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>KevinOS — Full Stack Product Manager</title>
     <!-- Open Graph / Social Media -->
     <meta property="og:type" content="website">
