--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -29,11 +29,11 @@
         rel="stylesheet">
     <link rel="stylesheet" href="kevinos.css">
     <!-- Privacy-friendly analytics by Plausible -->
-<script async src="https://plausible.io/js/pa-Ru0fCnO2UblTH4K7Q1eur.js"></script>
-<script>
-  window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
-  plausible.init()
-</script>
+    <script async src="https://plausible.io/js/pa-Ru0fCnO2UblTH4K7Q1eur.js"></script>
+    <script>
+        window.plausible = window.plausible || function () { (plausible.q = plausible.q || []).push(arguments) }, plausible.init = plausible.init || function (i) { plausible.o = i || {} };
+        plausible.init()
+    </script>
 </head>
 
 <body>
@@ -95,7 +95,7 @@
                 <span class="icon-emoji">📧</span>
                 <span class="icon-label">connect.sh</span>
             </button>
-            <a class="desktop-icon"
+            <a class="desktop-icon plausible-event-name=Resume+Download"
                 href="https://raw.githubusercontent.com/kevinmmiddleton/about/96b1aea8639f4a1f00122703cec10f14507f4fac/Kevin%20Middleton%20-%20Senior%20Product%20Manager%2012-18-2025.pdf"
                 download>
                 <span class="icon-emoji">📥</span>
@@ -501,8 +501,8 @@
                             </div>
                             <div class="exp-info">
                                 <h4><a href="https://lever.co" target="_blank"
-                                        onclick="event.stopPropagation()">LEVER</a></h4><span
-                                    class="exp-meta">Acquired by Employ July 2022</span>
+                                        onclick="event.stopPropagation()">LEVER</a></h4><span class="exp-meta">Acquired
+                                    by Employ July 2022</span>
                             </div>
                             <div class="exp-right">
                                 <div class="exp-role">Senior PM, HRIS Sync Lead</div>
@@ -553,8 +553,8 @@
                             </div>
                             <div class="exp-info">
                                 <h4><a href="https://sendoso.com" target="_blank"
-                                        onclick="event.stopPropagation()">SENDOSO</a></h4><span
-                                    class="exp-meta">Gifting Platform</span>
+                                        onclick="event.stopPropagation()">SENDOSO</a></h4><span class="exp-meta">Gifting
+                                    Platform</span>
                             </div>
                             <div class="exp-right">
                                 <div class="exp-role">Senior PM, Core Platform & eGift</div>
@@ -654,8 +654,8 @@
                             </div>
                             <div class="exp-info">
                                 <h4><a href="https://oracle.com" target="_blank"
-                                        onclick="event.stopPropagation()">ORACLE</a></h4><span
-                                    class="exp-meta">Social Cloud</span>
+                                        onclick="event.stopPropagation()">ORACLE</a></h4><span class="exp-meta">Social
+                                    Cloud</span>
                             </div>
                             <div class="exp-right">
                                 <div class="exp-role">Senior PM, Engage & Integrations</div>
@@ -928,10 +928,10 @@
                                 class="term-cmd">echo "Reach out anytime"<span class="cursor">▋</span></span></div>
                     </div>
                     <div class="connect-btns">
-                        <a href="mailto:kevin@middleton.io" class="connect-btn">📧</a>
-                        <a href="https://linkedin.com/in/kevinmiddleton" target="_blank" class="connect-btn">💼</a>
-                        <a href="https://github.com/kevinmmiddleton" target="_blank" class="connect-btn">🐙</a>
-                        <a href="https://calendly.com/kevin-middleton/15min" target="_blank" class="connect-btn">📅</a>
+                        <a href="mailto:kevin@middleton.io" class="connect-btn plausible-event-name=Contact+Email">📧</a>
+                        <a href="https://linkedin.com/in/kevinmiddleton" target="_blank" class="connect-btn plausible-event-name=Contact+LinkedIn">💼</a>
+                        <a href="https://github.com/kevinmmiddleton" target="_blank" class="connect-btn plausible-event-name=GitHub+Click">🐙</a>
+                        <a href="https://calendly.com/kevin-middleton/15min" target="_blank" class="connect-btn plausible-event-name=Calendly+Click">📅</a>
                     </div>
                 </div>
             </section>
