--- a/catdad/index.htm
+++ b/catdad/index.htm
@@ -30,11 +30,11 @@
     rel="stylesheet">
   <link rel="stylesheet" href="kawaii.css">
   <!-- Privacy-friendly analytics by Plausible -->
-<script async src="https://plausible.io/js/pa-lMKIBXIv55Cxe5xSP0CCz.js"></script>
-<script>
-  window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
-  plausible.init()
-</script>
+  <script async src="https://plausible.io/js/pa-lMKIBXIv55Cxe5xSP0CCz.js"></script>
+  <script>
+    window.plausible = window.plausible || function () { (plausible.q = plausible.q || []).push(arguments) }, plausible.init = plausible.init || function (i) { plausible.o = i || {} };
+    plausible.init()
+  </script>
 </head>
 
 <body>
@@ -73,7 +73,7 @@
           other.
         </p>
         <div class="meta">NYC · 3 cats · Strong opinions, loosely held ✧</div>
-        
+
         <p class="hero-cta-text">Open to work, open to chat, open to unsolicited cat pics. 15 min? 💬</p>
         <div class="hero-cta-buttons">
           <button class="btn kawaii-btn boing" onclick="handleCTA()">Let's talk 🐱</button>
@@ -269,6 +269,7 @@
     function handleCTA() {
       createConfetti();
       setTimeout(() => {
+        plausible('Calendly Click');
         window.open('https://calendly.com/kevin-middleton/15min', '_blank');
       }, 800);
     }
