--- a/fixer/index.htm
+++ b/fixer/index.htm
@@ -57,7 +57,7 @@
               <p class="subline">That's a solvable problem.</p>
               
               <div class="fixer-hero-ctas">
-                <a href="https://calendly.com/kevin-middleton/15min" target="_blank" rel="noopener noreferrer" class="fixer-hero-link primary">
+                <a href="https://calendly.com/kevin-middleton/15min" target="_blank" rel="noopener noreferrer" class="fixer-hero-link primary plausible-event-name=Calendly+Click">
                   <span class="doodle-circle"></span>
                   Book a call →
                 </a>
@@ -113,7 +113,7 @@
               <span>Refills:</span> <em class="rx-handwriting">As needed</em>
             </div>
 
-            <a href="https://calendly.com/kevin-middleton/15min" target="_blank" class="fixer-btn">Let's talk</a>
+            <a href="https://calendly.com/kevin-middleton/15min" target="_blank" class="fixer-btn plausible-event-name=Calendly+Click">Let's talk</a>
 
             <!-- Signature -->
             <div class="fixer-rx-sig">
